Changed paths in index file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Fun2shot</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="/landing page/styles.css">
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
     <header id="nav-wrapper">
         <nav id="nav">
           <div class="nav left">
-            <span class="gradient skew"><h1 class="logo un-skew"><a href="./index.html">
+            <span class="gradient skew"><h1 class="logo un-skew"><a href="/index.html">
                 <div class="colorful-text">
                     <span>F</span>
                     <span>u</span>
@@ -32,10 +32,10 @@
             <button id="menu" class="btn-nav"><span class="fas fa-bars">Button</span></button>
           </div>
           <div class="nav right">
-            <a href="./index.html" class="nav-link "><span class="nav-link-span"><span class="u-nav">Home</span></span></a>
-            <a href="./about.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">About</span></span></a>
+            <a href="/index.html" class="nav-link "><span class="nav-link-span"><span class="u-nav">Home</span></span></a>
+            <a href="/landing page/about.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">About</span></span></a>
             <!-- <a href="./games.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">Games</span></span></a> -->
-            <a href="./contact.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">Contact</span></span></a>
+            <a href="/landing page/contact.html" class="nav-link"><span class="nav-link-span"><span class="u-nav">Contact</span></span></a>
           </div>
         </nav>
       </header>
@@ -158,10 +158,10 @@
                 </div>
                 <p id="madeWith">Made with love by Mayank and Shrey 💛</p>
                 <ul class="menu">
-                <li class="menu__item"><a class="menu__link" href="./index.html">Home</a></li>
-                <li class="menu__item"><a class="menu__link" href="./about.html">About</a></li>
+                <li class="menu__item"><a class="menu__link" href="../index.html">Home</a></li>
+                <li class="menu__item"><a class="menu__link" href="/landing page/about.html">About</a></li>
                 <!-- <li class="menu__item"><a class="menu__link" href="#">Team</a></li> -->
-                <li class="menu__item"><a class="menu__link" href="./contact.html">Contact</a></li>
+                <li class="menu__item"><a class="menu__link" href="/landing page/contact.html">Contact</a></li>
             
                 </ul>
                 <p id="copy">&copy;2023 | All Rights Reserved</p>
@@ -172,5 +172,5 @@
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script src="./script.js"></script>
+    <script src="/landing page/script.js"></script>
     </body>
